Corrected image placement

--- a/tda/index.html
+++ b/tda/index.html
@@ -88,9 +88,9 @@
             <b>Definition.</b>
             A <em>persistence diagram</em> is a multiset of points in the plane, where each point \( (b,d) \) represents a feature that is born at time \( b \) and dies at time \( d \).
             This can be transformed into a <em>lifetime diagram</em> via the transformation \( (b,d) \mapsto (b, d-b) \).
-            <div class="w3-content w3-display-container w3-center">
+            <div class="w3-content w3-display-container w3-center" style="max-width:512px; max-height:512px">
               <figure>
-                <img src="../images/tda/sphere_pd.png" alt="sphere persistence diagram" style="max-width:512px; max-height:512px">
+                <img src="../images/tda/sphere_pd.png" alt="sphere persistence diagram" style="max-width:100%">
                 <figcaption style="text-align:center">
                   <em>
                     The persistence and lifetime diagrams of a point cloud sampled from a sphere.
@@ -102,9 +102,9 @@
           <li>
             <b>Definition.</b>
             A <em>bardcode diagram</em> is a multiset of intervals \( (b,d) \) where each interval represents a feature that is born at time \( b \) and dies at time \( d \). 
-            <div class="w3-content w3-display-container w3-center">
+            <div class="w3-content w3-display-container w3-center" style="max-width:512px; max-height:512px">
               <figure>
-                <img src="../images/tda/sphere_bd.png" alt="sphere barcode diagram" style="max-width:512px; max-height:512px">
+                <img src="../images/tda/sphere_bd.png" alt="sphere barcode diagram" style="max-width:100%">
                 <figcaption style="text-align:center">
                   <em>
                     The barcode diagram of a point cloud sampled from a sphere.
@@ -135,7 +135,7 @@
       </p>
       <div class="w3-content w3-display-container" style="max-width:512px; max-height:512px; float:left">
         <figure>
-          <img src="../images/tda/bootstrap.png" alt="bootstrap" style="max-width:512px; max-height:512px; max-width:100%">
+          <img src="../images/tda/bootstrap.png" alt="bootstrap" style="max-width:100%">
           <figcaption style="text-align:center">
             <em>
               A plot with the persistence diagrams of the full dataset and a subsample overlaid.
