Added stable Tamari page

--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="./tamari/"><img src="./images/tamari/hasse_123.png" alt="tamari hasse 123" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Stable Tamari Lattice</b></p>
+        <p>The combinatorics of posets in the stable Tamari lattice.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
       <div class="w3-container w3-white">
         <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Lefschetz Properties</b></p>
