--- a/tda/index.html
+++ b/tda/index.html
@@ -127,6 +127,9 @@
     <h2><b>Results</b></h2>
     <div class="w3-container w3-padding-large">
       <h4><b>Bootstrapping computations</b></h4>
+      <em>
+        Joint with <a class="weblink" href="https://github.com/JordanEckert" target="_blank">Jordan Eckert</a>.
+      </em>
       <p>
         Computing persistent homology is a computationally intensive task which is intractable for relatively small datasets (e.g., \( \lvert X \rvert \approx 10^4 \)).
         To mitigate this, we can use <a class="weblink" href="https://en.wikipedia.org/wiki/Bootstrapping_(statistics)" target="_blank">bootstrapping</a> techniques to estimate the persistent homology of the data from smaller samples of the data.
@@ -170,10 +173,6 @@
       </div>
     </div>
   </footer>
-
-  <div class="w3-black w3-center w3-padding-24">
-    Currently investigating with <a href="https://github.com/JordanEckert" title="Jordan Eckert" target="_blank" class="w3-hover-opacity">Jordan Eckert</a>.
-  </div>
 
 <!-- End page content -->
 </div>
