--- a/tea/index.html
+++ b/tea/index.html
@@ -68,7 +68,10 @@
   
   document.addEventListener("DOMContentLoaded", function() {
     const contributions = [
-      { name: "Initial", amount: 20 }
+      { name: "Initial", amount: 20 },
+      { name: "Venmo", amount: 40 },
+      { name: "Venmo", amount: 40 },
+      { name: "Venmo", amount: 30 }
     ];
     const goalAmount = 500;
 
