--- a/tea/index.html
+++ b/tea/index.html
@@ -71,7 +71,8 @@
       { name: "Initial", amount: 20 },
       { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 40 },
-      { name: "Venmo", amount: 30 }
+      { name: "Venmo", amount: 30 },
+      { name: "Venmo", amount: 45}
     ];
     const goalAmount = 500;
 
