--- a/tea/index.html
+++ b/tea/index.html
@@ -72,7 +72,9 @@
       { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 30 },
-      { name: "Venmo", amount: 45}
+      { name: "Venmo", amount: 45},
+      { name: "Venmo", amount: 50},
+      { name: "Venmo", amount: 20}
     ];
     const goalAmount = 500;
 
