--- a/tea/index.html
+++ b/tea/index.html
@@ -74,7 +74,8 @@
       { name: "Venmo", amount: 30 },
       { name: "Venmo", amount: 45},
       { name: "Venmo", amount: 50},
-      { name: "Venmo", amount: 20}
+      { name: "Venmo", amount: 20},
+      { name: "Venmo": amount: 30}
     ];
     const goalAmount = 500;
 
