--- a/tea/index.html
+++ b/tea/index.html
@@ -73,9 +73,11 @@
       { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 30 },
       { name: "Venmo", amount: 45 },
-      { name: "Venmo", amount: 50 },
+      { name: "Cash", amount: 50 },
+      { name: "Cash", amount: 20 },
+      { name: "Venmo", amount: 30 },
+      { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 20 },
-      { name: "Venmo", amount: 30 }
     ];
     const goalAmount = 500;
 
