Added seminar talks

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -109,6 +109,18 @@
   <p>
     <ul>
       <li>
+        <q>TBD</q>, Purdue University Commutative Algebra Seminar
+        <span style="float:right">October 2024</span>
+        <br>
+      </li>
+      <br>
+      <li>
+        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
+        <span style="float:right">October 2024</span>
+        <br>
+      </li>
+      <br>
+      <li>
         <q>Betti tables and Lefschetz properties</q>, University of Kentucky Algebra Seminar
         <span style="float:right">November 2023</span>
         <br>
