--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,26 @@
 <script>
     // timeline data
     const timelineEvents = [
+    { title: 'TBD', 
+      date: new Date('2024-10-16'), 
+      venue: 'Commutative Algebra Seminar',
+      location: 'University of Nebraska-Lincoln',
+      city: 'Lincoln, NE',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: '' } },
+                { title: 'TBD', 
+      date: new Date('2024-10-9'), 
+      venue: 'Commutative Algebra Seminar',
+      location: 'Purdue University',
+      city: 'West Lafayette, IN',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: '' } },
     { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2024-09-14'), 
       venue: 'AMS Fall Central Sectional',
