--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -154,14 +154,16 @@
         Auburn University
         <ul>
           <li>
-            <q>Castelnuovo-Mumford regularity of toric surfaces</q>, Algebra Seminar
+            <q>Betti numbers of connected sums of graded Artinian Gorenstein algebras</q>, Algebra Seminar
             <span style="float:right">September 2024</span>
             <br>
             Abstract 
             <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
             <blockquote class="abstract-content">
-              In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
-              We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.
+              Considered as an algebraic analog for the connected sum construction from topology, the connected sum construction introduced by Ananthnarayan, Avramov, and Moore is a method to produce Gorenstein rings. 
+              Joint with Nasrin Altafi, Roberta Di Gennaro, Federico Galetto, Rosa M. Miró-Roig, Uwe Nagel, Alexandra Seceleanu, and Junzo Watanabe, we determine the graded Betti numbers for connected sums and fiber products of Artinian Gorenstein algebras, where the fiber product in the local setting was obtained by Geller. 
+              We also show that the connected sum of doublings is the doubling of a fiber product ring. 
+              I will discuss these results through some examples and Macaulay2 code.
             </blockquote>
           </li>
           <br>
