Added link to slides

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -157,6 +157,7 @@
             <q>Betti numbers of connected sums of graded Artinian Gorenstein algebras</q>, Algebra Seminar
             <span style="float:right">September 2024</span>
             <br>
+            <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/connected-sums/presentation.html" target="_blank">Slides</a> | 
             Abstract 
             <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
             <blockquote class="abstract-content">
