--- a/talks/index.html
+++ b/talks/index.html
@@ -138,7 +138,7 @@
       city: 'Auburn, AL',
       extras: { notes: '', 
                 code: '', 
-                slides: '', 
+                slides: '../misc/slides/connected-sums/presentation.html', 
                 video: '',
                 abstract: 'Considered as an algebraic analog for the connected sum construction from topology, the connected sum construction introduced by Ananthnarayan, Avramov, and Moore is a method to produce Gorenstein rings. '
                           + 'Joint with Nasrin Altafi, Roberta Di Gennaro, Federico Galetto, Rosa M. Miró-Roig, Uwe Nagel, Alexandra Seceleanu, and Junzo Watanabe, we determine the graded Betti numbers for connected sums and fiber products of Artinian Gorenstein algebras, where the fiber product in the local setting was obtained by Geller. '
