Added some more talks

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -56,6 +56,18 @@
   <p>
     <ul>
       <li>
+        <q>Castelnuovo-Mumford regularity of toric surfaces</q>, Joint Mathematics Meetings (JMM)
+        <span style="float:right">January 2025</span>
+        <br>
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
+          We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.
+        </blockquote>
+        <br>
+      </li>
+      <li>
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional
         <span style="float:right">September 2024</span>
         <br>
@@ -109,16 +121,21 @@
   <p>
     <ul>
       <li>
+        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
+        <span style="float:right">October 2024</span>
+        <br>
+      </li>
+      <li>
+        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Reading Seminar (CARS)
+        <span style="float:right">October 2024</span>
+        <br>
+      </li>
+      <li>
         <q>TBD</q>, Purdue University Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
         <br>
       </li>
       <br>
-      <li>
-        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
-        <span style="float:right">October 2024</span>
-        <br>
-      </li>
       <br>
       <li>
         <q>Betti tables and Lefschetz properties</q>, University of Kentucky Algebra Seminar
