--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,17 @@
 <script>
     // timeline data
     const timelineEvents = [
+    { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-01-11'), 
+      venue: 'Joint Mathematics Meetings',
+      location: 'Seattle Convention Center',
+      city: 'Seattle, WA',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.' } },
     { title: 'TBD', 
       date: new Date('2024-10-16'), 
       venue: 'Commutative Algebra Seminar',
@@ -110,7 +121,17 @@
                 slides: '', 
                 video: '',
                 abstract: '' } },
-                { title: 'TBD', 
+    { title: 'TBD', 
+      date: new Date('2024-10-16'), 
+      venue: 'Commutative Algebra Reading Seminar',
+      location: 'University of Nebraska-Lincoln',
+      city: 'Lincoln, NE',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: '' } },
+    { title: 'TBD', 
       date: new Date('2024-10-9'), 
       venue: 'Commutative Algebra Seminar',
       location: 'Purdue University',
