Added slides for AMS Central sectional

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -71,6 +71,7 @@
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional
         <span style="float:right">September 2024</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/ams-central/presentation.html" target="_blank">Slides</a> | 
         Abstract 
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
