Updated tea fundraiser

--- a/tea/index.html
+++ b/tea/index.html
@@ -78,6 +78,9 @@
       { name: "Venmo", amount: 30 },
       { name: "Venmo", amount: 40 },
       { name: "Venmo", amount: 20 },
+      { name: "Venmo", amount: 16 },
+      { name: "Venmo", amount: 50 },
+      { name: "Venmo", amount: 20 },
     ];
     const goalAmount = 500;
 
