Fixed typo and bio

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </p>
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
-      However, I've been finding that a lot of side projects that interest me come from combinatorial optimization.
+      I am particularly interested in problems that can be approached via computation.
       I will be on the job market this fall.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
     </p>
@@ -173,7 +173,7 @@
         <!-- Education -->
         <li>
           <div>
-            <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Course</span>
+            <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
             <span style="float:right; width:30%"><em>Submitted</em></span>
           </div>
           <br>
