--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -67,6 +67,7 @@
         </blockquote>
         <br>
       </li>
+      <br>
       <li>
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional
         <span style="float:right">September 2024</span>
@@ -122,21 +123,47 @@
   <p>
     <ul>
       <li>
-        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
+        <q>Betti tables forcing failure of the weak Lefschetz property</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
+        <br>
         <br>
       </li>
       <li>
         <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Reading Seminar (CARS)
         <span style="float:right">October 2024</span>
         <br>
-      </li>
-      <li>
-        <q>TBD</q>, Purdue University Commutative Algebra Seminar
-        <span style="float:right">October 2024</span>
         <br>
       </li>
+      <li>
+        <q>Betti numbers of connected sums of graded Artinian Gorenstein algebras</q>, Purdue University Commutative Algebra Seminar
+        <span style="float:right">October 2024</span>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/connected-sums/presentation.html" target="_blank">Slides</a> | 
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          Considered as an algebraic analog for the connected sum construction from topology, the connected sum construction introduced by Ananthnarayan, Avramov, and Moore is a method to produce Gorenstein rings. 
+          Joint with Nasrin Altafi, Roberta Di Gennaro, Federico Galetto, Rosa M. Miró-Roig, Uwe Nagel, Alexandra Seceleanu, and Junzo Watanabe, we determine the graded Betti numbers for connected sums and fiber products of Artinian Gorenstein algebras, where the fiber product in the local setting was obtained by Geller. 
+          We also show that the connected sum of doublings is the doubling of a fiber product ring. 
+          I will discuss these results through some examples and Macaulay2 code.
+        </blockquote>
+      </li>
       <br>
+      <li>
+        <q>Betti tables and Lefschetz properties</q>, Purdue University Student Commutative Algebra Seminar
+        <span style="float:right">October 2024</span>
+        <br>
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution.
+          This can then be summarized with a Betti diagram which, in some sense, describes the complexity of the ring.
+          If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank.
+          Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences.
+          Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.
+        </blockquote>
+        <br>
+      </li>
       <br>
       <li>
         <q>Betti tables and Lefschetz properties</q>, University of Kentucky Algebra Seminar
