--- a/talks/index.html
+++ b/talks/index.html
@@ -111,7 +111,7 @@
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.' } },
-    { title: 'TBD', 
+    { title: 'Betti tables forcing failure of the weak Lefschetz property', 
       date: new Date('2024-10-16'), 
       venue: 'Commutative Algebra Seminar',
       location: 'University of Nebraska-Lincoln',
@@ -131,16 +131,33 @@
                 slides: '', 
                 video: '',
                 abstract: '' } },
-    { title: 'TBD', 
-      date: new Date('2024-10-9'), 
+    { title: 'Betti numbers of connected sums of graded Artinian Gorenstein algebras', 
+      date: new Date('2024-10-09'), 
       venue: 'Commutative Algebra Seminar',
+      location: 'Purdue University',
+      city: 'West Lafayette, IN',
+      extras: { notes: '', 
+                code: '', 
+                slides: '../misc/slides/connected-sums/presentation.html', 
+                video: '',
+                abstract: 'Considered as an algebraic analog for the connected sum construction from topology, the connected sum construction introduced by Ananthnarayan, Avramov, and Moore is a method to produce Gorenstein rings. '
+                          + 'Joint with Nasrin Altafi, Roberta Di Gennaro, Federico Galetto, Rosa M. Miró-Roig, Uwe Nagel, Alexandra Seceleanu, and Junzo Watanabe, we determine the graded Betti numbers for connected sums and fiber products of Artinian Gorenstein algebras, where the fiber product in the local setting was obtained by Geller. '
+                          + 'We also show that the connected sum of doublings is the doubling of a fiber product ring. ' 
+                          + 'I will discuss these results through some examples and Macaulay2 code.' } },
+    { title: 'Betti tables and Lefschetz properties', 
+      date: new Date('2024-10-09'), 
+      venue: 'Student Commutative Algebra Seminar',
       location: 'Purdue University',
       city: 'West Lafayette, IN',
       extras: { notes: '', 
                 code: '', 
                 slides: '', 
                 video: '',
-                abstract: '' } },
+                abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. '
+                          + 'This can then be summarized with a Betti diagram which, in some sense, describes the complexity of the ring. '
+                          + 'If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. '
+                          + 'Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences. '
+                          + 'Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.' } },
     { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2024-09-14'), 
       venue: 'AMS Fall Central Sectional',
